# The-Island-of-Survivors

./: .gitignore  CMakeLists.txt  README.md  game_log.txt  unix_collector.sh  unix_setup.sh  windows_collector.bat
libraries/SFML/: SFMLSharedTargets.cmake
libraries/SFML/windows/: SFMLSharedTargets.cmake
resources/game_field/: basic_field.txt  block_to_sprite.txt
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  functions.cpp  lib.cpp
src/common/math/: CMakeLists.txt  vec2.cpp  vec2.hpp
src/common/objects/: CMakeLists.txt  follow_object.cpp  follow_object.hpp
src/common/utils/: CMakeLists.txt  associative_storage.cpp  associative_storage.hpp  functions.cpp  functions.hpp
src/configuration/: app_config.hpp  game_config.hpp
src/game_logic/: CMakeLists.txt  game.cpp  game.hpp  game_field.cpp
src/game_logic/game_map/: CMakeLists.txt  game_map.cpp  game_map.h  game_map.hpp
src/game_logic/player/: CMakeLists.txt  player.cpp  player.hpp  player_condition.cpp  player_condition.h
src/graphics/: CMakeLists.txt  graphics_context.cpp  graphics_context.hpp  graphics_engine.cpp  graphics_engine.hpp
src/graphics/camera/: CMakeLists.txt  camera.cpp  camera.hpp
src/graphics/drawable/: CMakeLists.txt  drawable_object.cpp  drawable_object.hpp  resource.cpp  resource.hpp  sprite.cpp  sprite.hpp
src/graphics/drawable_objects/: CMakeLists.txt  drawable_object.cpp  drawable_object.hpp  sprite.cpp  sprite.hpp
src/graphics/drawable_objects/resources/: CMakeLists.txt  circle_resource.cpp  circle_resource.hpp  rectangle_resource.cpp  rectangle_resource.hpp  resource_interface.cpp  resource_interface.hpp
src/graphics/game_objects/: CMakeLists.txt  game_object.cpp  game_object.hpp  textures_manager.cpp  textures_manager.hpp
src/graphics/resource_managers/: CMakeLists.txt
src/graphics/textures/: CMakeLists.txt  textures_manager.hpp
src/graphics/view_control/: CMakeLists.txt  camera.cpp  camera.hpp
src/physics/: CMakeLists.txt  physic_object.cpp  physic_object.hpp  physical_context.cpp  physical_context.hpp  physical_engine.cpp  physical_engine.hpp
src/physics/game_objects/: CMakeLists.txt  game_object.cpp  game_object.hpp
src/physics/physical_objects/: CMakeLists.txt  object_border.cpp  object_border.hpp  physical_object.cpp  physical_object.hpp
src/player/: CMakeLists.txt  player.cpp  player.hpp
src/runtime/: CMakeLists.txt  app_runner.cpp  app_runner.hpp  game_runner.cpp
